--- a/Mifalot-app/package.json
+++ b/Mifalot-app/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angular-youtube-embed": "^1.3.1",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "^2.0.0-beta.7-pre",
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
     "rxjs": "^5.0.1",
