--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_install:
 
 before_script:
 - npm install -g angular-cli
+- npm install -g karma
 - npm install
-- ng build
+- ng build -- prod
 
 script: karma start config/karma.conf.js --single-run
