--- a/Mifalot-app/package.json
+++ b/Mifalot-app/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^2.0.0-beta.7-pre",
     "core-js": "^2.4.1",
     "firebase": "^3.9.0",
+    "ng2-notifications": "^0.3.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
